--- a/src/modules/shared/components/ui/input/style.module.scss
+++ b/src/modules/shared/components/ui/input/style.module.scss
@@ -6,9 +6,20 @@
   }
 
   &.variantGlass {
-    @apply bg-gradient-to-br to-zinc-500/30 from-purple-500/30 backdrop-blur ring-violet-600 border-violet-900/50 shadow-inner;
-    @apply focus-within:shadow-none focus-within:border-violet-600 focus-within:ring-violet-300;
+    &.errorGlass {
+      @apply bg-destructive/30 ring-destructive border-destructive/40 transition-all;
+      @apply focus-within:ring-violet-300 focus-within:border-violet-600 focus-within:bg-destructive/40;
+
+      & > input.fieldInput {
+        @apply text-destructive placeholder:text-zinc-400;
+      }
+    }
+
+    @apply bg-gradient-to-br to-zinc-500/30 from-purple-500/30 backdrop-blur ring-violet-600 border-violet-900/50;
+    @apply focus-within:border-violet-600 focus-within:ring-violet-300;
     @apply border-2 ring-1 focus-within:ring-2;
+
+
 
     & > input.fieldInput {
       @apply text-zinc-100 placeholder:text-zinc-400;
@@ -16,10 +27,16 @@
   }
 
   &.sizeDefault {
-    @apply h-9 py-2 px-4 rounded-md;
+    @apply h-10 py-2 px-4 rounded-md;
 
     &:has(.labelInside) {
-      @apply h-12 pt-4;
+      @apply h-12 pt-5;
+    }
+    &:has(.labelInOutSide) {
+      @apply h-12;
+    }
+    &:has(.labelOutside) {
+      @apply h-10 mt-4;
     }
   }
 }
@@ -28,15 +45,27 @@
   @apply absolute transition-all duration-300;
 
   & > strong {
-    @apply text-destructive font-semibold;
+    @apply text-destructive font-semibold ml-0.5;
   }
 
   &.labelInside {
-    @apply left-4 top-1/2 -translate-y-1/2;
+    @apply left-4 top-1/2 -translate-y-1/2 text-base;
 
     &.insideNotEmpty {
-      @apply left-2 top-2 text-xs text-zinc-50;
+      @apply left-2 top-2 text-xs;
     }
 
   }
+  &.labelInOutSide {
+    @apply left-4 top-1/2 -translate-y-1/2 text-base;
+
+    &.inOutSideNotEmpty {
+      @apply -left-1 -top-4 text-sm;
+    }
+  }
+  &.labelOutside {
+    @apply left-0 -top-6 text-sm;
+  }
 }
+
+
